fix font on main.css

--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,10 @@ body {
     background-color: #ffffff;
 }
 
-.logo {
+#logo {
+    font-family: sans-serif;
+    font-size: 24px;
+    font-weight: bold;
     margin: 0px;
     padding: 24px;
     background-color: #DB7F67;
