--- a/css/main.css
+++ b/css/main.css
@@ -54,19 +54,43 @@ table {
     margin: auto;
 }
 
-body {
-    background-color: #ffffff;
+h2 {
+    font-size: 1.5em;
+    font-weight: bolder;
 }
 
-#logo {
+body {
+    background-color: #ffffff;
+    font-family: sans-serif;
+}
+
+header {
     font-family: sans-serif;
     font-size: 24px;
     font-weight: bold;
     margin: 0px;
     padding: 24px;
     background-color: #DB7F67;
-    display: block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
        
+}
+
+.socials {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+}
+
+.icon {
+    width: 32px;
+}
+
+.icon.facebook {
+    width: 32px;
+    top: -5px;
 }
 
 footer {
