--- a/css/main.css
+++ b/css/main.css
@@ -60,8 +60,9 @@ h2 {
 }
 
 body {
-    background-color: #ffffff;
+    background-color: #e2d6c9;
     font-family: sans-serif;
+    margin: auto;
 }
 
 header {
@@ -94,7 +95,11 @@ header {
 }
 
 footer {
+    text-align: center;
     background-color: #DB7F67;
     margin-top: 12px;
     padding: 12px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
