--- a/galerie/galerie.css
+++ b/galerie/galerie.css
@@ -1,6 +1,5 @@
 #img {
     width: auto;
-    padding: 10px;
     height: 300px;
     transition-duration: 1s;
 }
@@ -17,4 +16,22 @@ div.container {
     flex-direction:row;
     align-items: flex-start;
     flex-wrap:wrap
+}
+
+p {
+    position: absolute;
+    height: 250px;
+    width: 250px;
+    padding: 15px;
+    top: 15px;
+    z-index: -1;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+}
+
+div.obrazek {
+    position: relative;
+    padding: 10px;
 }
