--- a/memes/memes.css
+++ b/memes/memes.css
@@ -1,9 +1,10 @@
 .gallery-img img {
     width: auto;
-    padding: 10px;
+    padding: 15px;
     height: 300px;
    
 }
 h2 {
     padding: 15px;
 }
+p{padding: 15px;}
