--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
 /* CSS RESET */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+html, body, div, span, applet, object, iframe, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
@@ -76,6 +75,17 @@ header {
     justify-content: space-between;
     align-items: center;
        
+}
+
+#logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+}
+
+.logo-img {
+    height: 36px;
 }
 
 .socials {
