--- a/galerie/galerie.css
+++ b/galerie/galerie.css
@@ -2,36 +2,42 @@
     width: auto;
     height: 300px;
     transition-duration: 1s;
+    
+    
 }
 .nadpis {
     font-size: 50px;
     padding: 10px;
 }
-#img:hover {
-    opacity: 0.2;
+.obrazek:hover img {
+    opacity: 0.4;
 }
 
 div.container {
     display: flex;
     flex-direction:row;
     align-items: flex-start;
-    flex-wrap:wrap
+    flex-wrap:wrap;
+    justify-content: flex-start;
+    padding: 0 40px;
 }
 
 p {
     position: absolute;
     height: 250px;
     width: 250px;
-    padding: 15px;
+    padding: 20px;
     top: 15px;
     z-index: -1;
     margin-left: auto;
     margin-right: auto;
     left: 0;
     right: 0;
+    text-align: center;
+    font-size: 25px;
 }
 
 div.obrazek {
     position: relative;
-    padding: 10px;
+    padding: 20px;
 }
