--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
+
+
 /* CSS RESET */
 
 html, body, div, span, applet, object, iframe,
@@ -49,7 +53,7 @@ table {
 
 
 * {
-    font-family: sans-serif;
+    font-family: "Rubik", sans-serif;
     color: #000000;
     margin: auto;
 }
@@ -87,12 +91,11 @@ h6 {
 
 body {
     background-color: #e2d6c9;
-    font-family: sans-serif;
+    font-family: "Rubik", sans-serif;
     margin: auto;
 }
 
 header {
-    font-family: sans-serif;
     font-size: 24px;
     font-weight: bold;
     margin: 0px;
@@ -117,6 +120,7 @@ header {
 
 .title {
     font-size: 24px;
+    text-decoration: none;
 }
 
 .socials {
