--- a/memes/memes.css
+++ b/memes/memes.css
@@ -1,8 +1,15 @@
 .gallery-img img {
     width: auto;
     padding: 15px;
-    height: 300px; 
+    height: 300px;  
+    transition-duration: 0.5s;
+   
 }
+
+.gallery-img img:hover {
+transform: scale(1.1);
+}
+
 
 h2 {padding: 15px;}
 
