--- a/galerie/galerie.css
+++ b/galerie/galerie.css
@@ -1,19 +1,10 @@
-#img {
-    width: auto;
-    height: 300px;
-    transition-duration: 1s;
-    
-    
-}
 .nadpis {
     font-size: 50px;
     padding: 10px;
 }
-.obrazek:hover img {
-    opacity: 0.4;
-}
 
-div.container {
+
+.reference-container {
     display: flex;
     flex-direction:row;
     align-items: flex-start;
@@ -22,22 +13,69 @@ div.container {
     padding: 0 40px;
 }
 
-p {
+.reference-item {
+    position: relative;
+    padding: 20px;
+}
+
+.reference-item:hover .reference-img {
+    opacity: 0.35;
+}
+
+.reference-item:hover .reference-text {
+    opacity: 1;
+}
+
+.reference-img {
+    width: auto;
+    height: 300px;
+    transition-duration: 1s;
+}
+
+.reference-text {
+    transition-duration: 1s;
+    opacity: 0;
     position: absolute;
-    height: 250px;
-    width: 250px;
+    height: 230px;
+    width: 220px;
     padding: 20px;
     top: 15px;
-    z-index: -1;
     margin-left: auto;
     margin-right: auto;
     left: 0;
     right: 0;
-    text-align: center;
-    font-size: 25px;
+    text-align: left;
+    font-size: 19px;
+    font-style: italic;
+    line-height: normal;
 }
 
-div.obrazek {
-    position: relative;
-    padding: 20px;
+.reference-author {
+    margin-bottom: 10px;
 }
+.reference-author-img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    align-items: flex-start;
+    
+}
+.reference-author-name {
+    color: blue;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
