--- a/home-page/home-main.css
+++ b/home-page/home-main.css
@@ -7,6 +7,10 @@ main {
     width: 100%;
 }
 
+span {
+    font-size: 18px;
+}
+
 .introduction {
     height: calc(100vh - 125.75px);
     display: flex;
@@ -22,6 +26,10 @@ main {
 }
 
 .description {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    justify-content: center;
     font-size: 24px;
     text-wrap: wrap;
     width: 600px;
