--- a/obleceni/obleceni.css
+++ b/obleceni/obleceni.css
@@ -8,4 +8,46 @@ main {
 
 .intro {
     text-align: center;
+    margin-top: 32px;
 }
+
+.showcase {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 48px;
+    padding: 12px;
+    margin-top: 64px;
+}
+
+.product {
+    width: 300px;
+    background-color: white;
+    padding: 28px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 4px;
+    transition-duration: 300ms;
+}
+
+.product:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+.product .image {
+    display: flex;
+    justify-content: center;
+}
+
+.product .text {
+    display: flex;
+    flex-direction: column;
+    padding-top: 16px;
+    gap: 5px;
+}
+
+.product img {
+    width: 250px;
+}
+
