--- a/rady/rady.css
+++ b/rady/rady.css
@@ -21,6 +21,8 @@ background-color: #CEC3B6;
     margin-bottom: 15px;
     line-height: 19px;
     margin-top: 17px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 
