--- a/obleceni/obleceni.css
+++ b/obleceni/obleceni.css
@@ -23,8 +23,10 @@ main {
 
 .product {
     width: 300px;
+    height: 500px;
     background-color: whitesmoke;
     padding: 28px;
+    gap: 12px;
     display: flex;
     flex-direction: column;
     border-radius: 4px;
