--- a/rady/rady.css
+++ b/rady/rady.css
@@ -1,7 +1,6 @@
 .hrasek {
 font-family: Arial, Helvetica, sans-serif;
 margin: 0;
-background-color: #CEC3B6;
 }
 
 .article-container {
@@ -12,8 +11,8 @@ background-color: #CEC3B6;
 }
 
 .article-box {
-    background-color: #A27E6F;
-    border: 2px solid #000000;
+    background-color: #c8aa9c;
+    /* border: 2px solid #DB7F67; */
     border-radius: 4px;
     padding: 50px; 
     box-sizing: border-box;
@@ -30,12 +29,12 @@ h2 {
     display: flex;
    justify-content: center;
    height: 30px;
-   background: #A27E6F;
-   border: 2px solid #000000;
+   /* background: #A27E6F;
+   border: 2px solid #000000; */
    border-radius: 4px;
    margin: 17px;
    padding: 5px;
-   letter-spacing: 7px;
+   /* letter-spacing: 7px; */
    align-items: center;
 }
 
