--- a/memes/memes.css
+++ b/memes/memes.css
@@ -11,9 +11,9 @@ transform: scale(1.1);
 }
 
 
-h2 {padding: 15px;}
+h2 {padding: 15px; text-align: center; margin-top: 12px;}
 
-p{padding: 15px;}
+p{padding: 15px; text-align: center;}
 
 .header-title {
     padding: 0px;
