--- a/obleceni/obleceni.css
+++ b/obleceni/obleceni.css
@@ -28,7 +28,7 @@ main {
 .product {
     width: 300px;
     height: 500px;
-    background-color: whitesmoke;
+    background-color: #c8aa9c;
     padding: 28px;
     gap: 12px;
     display: flex;
