--- a/obleceni/obleceni.css
+++ b/obleceni/obleceni.css
@@ -30,6 +30,7 @@ main {
     height: 500px;
     background-color: #c8aa9c;
     padding: 28px;
+    padding-top: 0px;
     gap: 12px;
     display: flex;
     flex-direction: column;
