--- a/memes/memes.css
+++ b/memes/memes.css
@@ -11,7 +11,7 @@ transform: scale(1.1);
 }
 
 
-h2 {padding: 15px; text-align: center; margin-top: 12px;}
+h1 {padding: 15px; text-align: center; margin-top: 56px;;}
 
 p{padding: 15px; text-align: center;}
 
