--- a/obleceni/obleceni.css
+++ b/obleceni/obleceni.css
@@ -31,11 +31,11 @@ main {
     height: 500px;
     background-color: #c8aa9c;
     padding: 28px;
-    padding-top: 0px;
     gap: 12px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
+    align-items: center;
     border-radius: 4px;
     transition-duration: 300ms;
 }
@@ -47,6 +47,8 @@ main {
 .product .image {
     display: flex;
     justify-content: center;
+    width: 275px;
+    height: 275px;
 }
 
 .product .text {
