--- a/galerie/galerie.css
+++ b/galerie/galerie.css
@@ -38,6 +38,8 @@
     height: 300px;
     transition-duration: 1s;
     border-radius: 4%;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .reference-text {
