--- a/galerie/galerie.css
+++ b/galerie/galerie.css
@@ -7,6 +7,7 @@
 }
 
 .description {
+    font-size: 18px;
     padding: 15px; 
     text-align: center;
 }
@@ -16,7 +17,7 @@
     flex-direction:row;
     align-items: flex-start;
     flex-wrap:wrap;
-    justify-content: flex-start;
+    justify-content: center;
     padding: 20px 40px;
 }
 
