fix font size to be consistent

--- a/memes/memes.css
+++ b/memes/memes.css
@@ -20,7 +20,7 @@ transform: scale(1.1);
 
 h1 {padding: 15px; text-align: center; margin-top: 56px;;}
 
-p{padding: 15px; text-align: center;}
+p{padding: 15px; text-align: center; font-size: 18px;}
 
 .header-title {
     padding: 0px;
