fix memes heading

--- a/memes/memes.css
+++ b/memes/memes.css
@@ -35,6 +35,7 @@ p{padding: 15px; text-align: center; font-size: 18px;}
 
 .header-title {
     padding: 0px;
+    font-size: 24px;
 }
 
 .divider {
